syntax = "proto3";
package proto;

message TodoListCreated {
  string id = 1;
  string user = 2;
  string title = 3;
}

message TodoListUpdated {
  string id = 1;
  string title = 3;
}

message TodoListDeleted {
  string id = 1;
}


message TodoItemCreated {
  string id = 1;
}