syntax = "proto3";
package proto;


message UserCreated {
    string id = 1;
}